turtleart.polygon7.Polygon7.scala.error
Compilation error:
Polygon7:6: error: ')' expected but ';' found.
    droite((360.0/7);
                    ^